--- a/singolo1.css
+++ b/singolo1.css
@@ -1,3 +1,4 @@
+
 @import "fonts.css";
 
 :root {
@@ -22,8 +23,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: lightslategrey; /*--------------------------*/
   font-family: 'Lato', Verdana, sans-serif;
+  color: #fff;
 }
 
 *,
@@ -38,9 +39,31 @@ h1 {
   font-size: 1.5625rem;
   line-height: 1;
   font-weight: 700;
-  color: var(--color-header-text-color);
-  text-transform: uppercase;
-  letter-spacing: -0.02em;
+  text-transform: uppercase;  
+}
+
+h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.875rem;
+  line-height: 1;
+  font-weight: 900;
+  text-transform: capitalize;
+}
+
+h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.125rem;
+  line-height: 1;
+  font-weight: 900;
+  text-transform: capitalize;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  text-align: justify;
 }
 
 .button {
@@ -68,16 +91,6 @@ ul {
 }
 
 li {
-  margin: 0;
-  padding: 0;
-}
-
-h2, h3, h4 {
-  margin: 0;
-  padding: 0;
-}
-
-p {
   margin: 0;
   padding: 0;
 }
@@ -110,6 +123,8 @@ img {
 .logo {
   display: block;
   position: relative;
+  color: var(--color-header-text-color);
+  letter-spacing: -0.02em;
 }
 
 .logo::after {
@@ -224,49 +239,67 @@ img {
 
 /*- section-services --------------------------------------- */
 
-.section-services {
-  padding: 3.9em 0 3.7em 0;
+.services {
+  padding: 3.9em 0 1.875em 0;
   background-color: var(--color-services-background);
   border-bottom: 6px solid var(--color-services-border);
 }
 
 .services__title {
-  font-size: 1.875rem;
-  line-height: 1.875rem;
-  font-weight: 900;
   color: var(--color-services-title);
-  text-transform: capitalize;
-  letter-spacing: -0.005em;
+  word-spacing: 0.005em;
+  letter-spacing: -0.003125em;
 }
 
 .services__text {
   margin-top: 1.125em;
   font-size: 1.125rem;
-  line-height: 1.875rem;
+  line-height: 1.7;
   font-weight: 300;
   color: var(--color-services-text);
-  letter-spacing: 0.01em;
 }
 
-.services-list {
-  margin: 1.0em 0.0625em 0 0.0625em;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 1.25em;
-  grid-template-rows: 1fr 1fr;
-}
-
-.services-list__item {
-  margin: 0;
-  padding: 1.875em 0 0 0;
+.layout-3-column {
   display: flex;
-  align-items: flex-start;
+  justify-content: space-between;
+  flex-shrink: 1;
+  flex-wrap: wrap;
 }
 
-.services-tile__icon {
+.layout-3-column__item {
+  max-width: 33.33%;
+}
+
+.services__list {
+  margin-top: 2.85em;
+}
+
+.services__list--perfectPixel {
+  margin-left: 0.0625em;
+  margin-right:0.0625em;
+}
+
+.services-tile {
+  margin: 0;
+  padding: 0;
+  padding-left: 5em;
+  padding-bottom: 1.875em;
+  position: relative;
+}
+
+.layout-3-column__item.services-tile {
+  --margin-right-services-tile: 1.25em;
+  max-width: calc((100% - 2 * var(--margin-right-services-tile)) / 3);
+}
+
+.services-tile::before {
+  content: '';
+  display: block;
   width: 59px;
   height: 59px;
-  margin: 0.125em 1.25em 0 0;
+  position: absolute;
+  left: 0;
+  top: 0.125em;
   border-radius: 50%;
   border: 2px solid var(--color-services-title);
   background-position: center;
@@ -274,49 +307,39 @@ img {
   background-size: initial;
 }
 
-.pen-icon {
+.services-tile--pen-icon.services-tile::before {
   background-image: url(./assets/images/pen.svg);
 }
 
-.bulb-icon {
+.services-tile--bulb-icon.services-tile::before {
   background-image: url(./assets/images/bulb.svg);
 }
 
-.heart-icon {
+.services-tile--heart-icon.services-tile::before {
   background-image: url(./assets/images/heart.svg);
 }
 
-.phone-icon {
+.services-tile--phone-icon.services-tile::before {
   background-image: url(./assets/images/phone.svg);
 }
 
-.bubble-icon {
+.services-tile--bubble-icon.services-tile::before {
   background-image: url(./assets/images/bubble.svg);
 }
 
-.star-icon {
+.services-tile--star-icon.services-tile::before {
   background-image: url(./assets/images/star.svg);
 }
 
-.services-tile__body {
-  flex: 1;
-}
-
-.services-tile__body > h3 {
-  font-size: 1.125rem;
-  line-height: 1.125rem;
-  font-weight: 900;
+.services-tile__title {
   color: var(--color-services-title);
-  text-transform: capitalize;
   letter-spacing: 0.001em;
 }
 
-.services-tile__body > p {
-  margin-top: 0.75em;
+.services-tile__text {
+  padding-top: 0.75em;
   font-size: 0.75rem;
-  line-height: 1.375rem;
+  line-height: 1.84;
   font-weight: 400;
   color: var(--color-services-text);
-  text-align: justify;
-  letter-spacing: 0.01em;
 }
