--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: 'Lato', Verdana, sans-serif;
+  font-family: inherit;
   text-transform: capitalize;
   cursor: pointer;
 }
@@ -111,7 +111,7 @@ textarea {
   margin: 0;
   padding: 0;
   border: none;
-  font-family: 'Lato', Verdana, sans-serif;
+  font-family: inherit;
 }
 
 a {
@@ -149,12 +149,6 @@ img {
   padding: 2em 0 2em 0;
   background-color: var(--color-header-background);
   border-bottom: 6px solid var(--color-header-border);
-}
-
-.wrapper {
-  max-width: var(--content-width);
-  margin: 0 auto;
-  padding: 0 2.5em;
 }
 
 .header__wrapper {
@@ -210,7 +204,7 @@ img {
   letter-spacing: -0.0275em;
 }
 
-.navbar__item--active > .navbar__link {
+.navbar__link--active {
   color: var(--color-slider-background);
 }
 
@@ -395,8 +389,8 @@ img {
 }
 
 .feature-tile {
-  margin: 0;
-  padding: 0 0 1.875em 5em;
+  margin-bottom: 1.875em;
+  padding-left: 5em;
   position: relative;
 }
 
@@ -446,7 +440,7 @@ img {
 
 .feature-tile__text {
   max-height: 6.25em;
-  padding-top: 0.75em;
+  margin-top: 0.75em;
   font-size: 0.75rem;
   line-height: 1.84;
   font-weight: 400;
@@ -467,7 +461,7 @@ img {
 }
 
 .portfolio__text {
-  padding-top: 1.15em;
+  margin-top: 1.15em;
   font-size: 1.125rem;
   line-height: 1.67;
   font-weight: 300;
@@ -554,8 +548,6 @@ img {
 }
 
 .portfolio__link:active {
-  border-radius: 0.5rem;
-  border: 3px solid var(--color-slider-background);
   filter: brightness(130%);
   transition: filter 0.1s linear;
 }
@@ -710,12 +702,11 @@ img {
 }
 
 .social-link:hover {
-  border: 2px solid var(--color-slider-border);
+  border: 2px solid var(--color-quote-background);
 }
 
 .social-link:active {
-  border: 2px solid var(--color-slider-border);
-  background-color: var(--color-slider-background);
+  background-color: var(--color-quote-background);
   transition: background-color 0.1s linear;
 }
 
@@ -753,7 +744,7 @@ img {
 }
 
 .quote__text {
-  padding-top: 1.175em;
+  margin-top: 1.175em;
   font-size: 1.125rem;
   line-height: 1.67;
   font-weight: 300;
@@ -761,7 +752,7 @@ img {
 }
 
 .flex-2-column {
-  padding-top: 2.75em;
+  margin-top: 2.75em;
   display: flex;
   justify-content: space-between;
 }
@@ -806,7 +797,7 @@ img {
 
 .form__submit {
   position: absolute;
-  left: calc(100% + 1rem);
+  left: calc(100% + 1.3125rem);
   bottom: 0;
   text-transform: uppercase;
   padding-left: 2em;
@@ -818,12 +809,11 @@ img {
 .form__submit:hover {
   padding: calc(0.66667em - 2px) calc(2em - 2px);
   border: 2px solid var(--color-quote-title);
-  transition: 0.1s linear;
 }
 
 .form__submit:active {
   background-color: var(--color-footer-background);
-  transition: 0.1s linear;
+  transition: 0.2s linear;
 }
 
 .contacts {
@@ -850,7 +840,8 @@ img {
 }
 
 .contacts-list {
-  padding: 1.2625rem 0 0 1.0rem;
+  margin-top: 1.2625rem;
+  padding-left: 1.0rem;
 }
 
 .contact-link {
@@ -902,7 +893,7 @@ img {
   padding-left: calc(0.33333em - 1px);
   padding-right: calc(0.33333em - 1px);
   border-radius: 0.4em;
-  border: 1px solid var(--color-quote-input-background);
+  border: 1px solid var(--color-footer-background);
 }
 
 .contact-link:hover::before {
@@ -910,9 +901,8 @@ img {
 }
 
 .contact-link:active {
-  border-radius: 0.4em;
-  background-color: var(--color-quote-input-background);
-  transition: background-color 0.1s linear;
+  background-color: var(--color-footer-background);
+  transition: background-color 0.2s linear;
 }
 
 /*- footer --------------------------------------- */
