--- a/style.css
+++ b/style.css
@@ -121,6 +121,10 @@ a {
   text-decoration: none;
 }
 
+a:focus {
+  outline-color: var(--color-slider-background);
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -209,8 +213,7 @@ img {
 }
 
 .navbar__link:hover {
-  transform: scale(0.9);
-  transition: transform 0.1s linear;
+  text-decoration: underline;
 }
 
 .navbar__link:active {
@@ -262,6 +265,10 @@ img {
 .slider__button:active {
   filter: brightness(10);
   background-size: 80%;
+}
+
+.slider__button:focus {
+  outline-color: var(--color-header-background);
 }
 
 .slider-list {
@@ -515,6 +522,11 @@ img {
   color: #dedede;
 }
 
+.portfolio-tab:focus {
+  border: 1px solid var(--color-slider-background);
+  outline: none;
+}
+
 .portfolio__images {
   margin-top: 1.1875em;
 }
@@ -532,7 +544,6 @@ img {
 .images-list__item {
   height: 11.6875em;
   width: 13.75em;
-  overflow: hidden;
 }
 
 .portfolio__link {
@@ -552,6 +563,11 @@ img {
   transition: filter 0.1s linear;
 }
 
+.portfolio__link:focus {
+  border: 1px solid var(--color-slider-background);
+  outline: none;
+}
+
 .portfolio__img {
   display: block;
   object-fit: fill;
@@ -559,51 +575,51 @@ img {
 }
 
 .portfolio__img--01 {
-  transform: translate(-0.5em, -0.69em);
+  object-position: -0.5em -0.69em;
 }
 
 .portfolio__img--02 {
-  transform: translate(-5.13em, -2.69em);
+  object-position: -5.13em -2.69em;
 }
 
 .portfolio__img--03 {
-  transform: translate(-0.69em, -0.063em);
+  object-position: -0.69em -0.063em;
 }
 
 .portfolio__img--04 {
-  transform: translate(-1.5em, -0.13em);
+  object-position: -1.5em -0.13em;
 }
 
 .portfolio__img--05 {
-  transform: translate(-0.628em, -1em);
+  object-position: -0.628em -1em;
 }
 
 .portfolio__img--06 {
-  transform: translate(-1.0em, -0.25em);
+  object-position: -1em -0.25em;
 }
 
 .portfolio__img--07 {
-  transform: translate(-1.94em, -2.44em);
+  object-position: -1.94em -2.44em;
 }
 
 .portfolio__img--08 {
-  transform: translate(-1.5em, -2.0em);
+  object-position: -1.5em -2.0em;
 }
 
 .portfolio__img--09 {
-  transform: translate(-1.0em, -0.128em);
+  object-position: -1em -0.128em;
 }
 
 .portfolio__img--10 {
-  transform: translate(-8.816em, -7.066em);
+  object-position: -8.816em -7.066em;
 }
 
 .portfolio__img--11 {
-  transform: translate(-9.0em, -10.94em);
+  object-position: -9.0em -10.94em;
 }
 
 .portfolio__img--12 {
-  transform: translate(-2.25em, -3.75em);
+  object-position: -2.25em -3.75em;
 }
 
 /*- section-aboutUs --------------------------------------- */
@@ -782,16 +798,19 @@ img {
 
 .form__input:focus {
   color: var(--color-quote-title);
+  outline-color: var(--color-footer-background);
 }
 
 .form__input:required:focus:valid {
-  outline: 2px solid green;
-  outline-offset: 3px;
+  padding: calc(0.66667em - 2px) calc(1.25em - 2px);
+  border: 2px solid green;
+  outline: none;
 }
 
 .form__input:required:focus:invalid {
-  outline: 2px solid red;
-  outline-offset: 3px;
+  padding: calc(0.66667em - 2px) calc(1.25em - 2px);
+  border: 2px solid red;
+  outline: none;
 }
 
 .form__input + .form__input {
@@ -913,6 +932,10 @@ img {
 .contact-link:active {
   background-color: var(--color-footer-background);
   transition: background-color 0.2s linear;
+}
+
+.contact-link:focus {
+  outline-color: var(--color-footer-background);
 }
 
 /*- footer --------------------------------------- */
