--- a/style.css
+++ b/style.css
@@ -792,6 +792,9 @@ img {
   overflow: hidden;
 }
 
+.form__input::-ms-input-placeholder {
+  color: inherit;
+}
 .form__input::placeholder {
   color: inherit;
 }
@@ -801,13 +804,13 @@ img {
   outline-color: var(--color-footer-background);
 }
 
-.form__input:required:focus:valid {
+.form__input:required:focus:not(:placeholder-shown):valid {
   padding: calc(0.66667em - 2px) calc(1.25em - 2px);
   border: 2px solid green;
   outline: none;
 }
 
-.form__input:required:focus:invalid {
+.form__input:required:focus:not(:placeholder-shown):invalid {
   padding: calc(0.66667em - 2px) calc(1.25em - 2px);
   border: 2px solid red;
   outline: none;
@@ -877,6 +880,7 @@ img {
   position: relative;
   padding-left: 0.33333em;
   padding-right: 0.33333em;
+  border-radius: 0.4em;
   font-size: 0.75rem;
   line-height: 1.6;
   font-weight: 400;
@@ -919,18 +923,11 @@ img {
 }
 
 .contact-link:hover {
-  padding-left: calc(0.33333em - 1px);
-  padding-right: calc(0.33333em - 1px);
-  border-radius: 0.4em;
-  border: 1px solid var(--color-footer-background);
-}
-
-.contact-link:hover::before {
-  left: calc(-0.75em - 1px);
+  text-decoration: underline;
 }
 
 .contact-link:active {
-  background-color: var(--color-footer-background);
+  background-color: var(--color-quote-input-background);
   transition: background-color 0.2s linear;
 }
 
