--- a/style.css
+++ b/style.css
@@ -150,9 +150,12 @@ img {
 /*- header --------------------------------------- */
 
 .header {
+  position: sticky;
+  top: 0;
   padding: 2em 0 2em 0;
   background-color: var(--color-header-background);
   border-bottom: 6px solid var(--color-header-border);
+  z-index: 100;
 }
 
 .header__wrapper {
@@ -181,15 +184,19 @@ img {
   justify-content: space-between;
 }
 
-.navbar__item + .navbar__item {
+.navbar__item {
   position: relative;
-  margin-left: 1.875em;
+  margin: 0 0.1875em;
+}
+
+.navbar__item:last-child {
+  margin-right: -0.75em;
 }
 
 .navbar__item + .navbar__item::before {
   content: "";
   position: absolute;
-  left: -1em;
+  left: -0.25em;
   top: 50%;
   width: 3px;
   height: 3px;
@@ -200,25 +207,36 @@ img {
 
 .navbar__link {
   display: block;
+  padding: 0 0.75em;
   font-size: 0.75rem;
   line-height: 1.3;
   font-weight: 700;
   color: var(--color-header-text-color);
   text-transform: uppercase;
   letter-spacing: -0.0275em;
-}
-
-.navbar__link--active {
-  color: var(--color-slider-background);
+  user-select: none;
+  transition: all 0.15s linear;
 }
 
 .navbar__link:hover {
   text-decoration: underline;
 }
 
+.navbar__link--active {
+  color: var(--color-slider-background);
+}
+
 .navbar__link:active {
   color: var(--color-slider-background);
 }
+
+/*- header-height --------------------------------------- */
+
+/* body {
+  position: sticky;
+  --header-height: calc(2em + 1.5625rem + 2em + 6px);
+  top: var(--header-height);
+} */
 
 /*- slider-section --------------------------------------- */
 
