--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ img {
 
 .navbar__link {
   display: block;
-  padding: 0 0.75em;
+  padding: 0 1em;
   font-size: 0.75rem;
   line-height: 1.3;
   font-weight: 700;
@@ -331,6 +331,7 @@ img {
   object-fit: none;
   object-position: -14px -135px;
   z-index: 20;
+  transition: filter 0.3s linear;
 }
 
 .iphone-horizontal {
@@ -368,6 +369,14 @@ img {
   object-fit: none;
   object-position: -125px -119px;
   z-index: 20;
+}
+
+.iphone__screen:hover {
+  border-color: var(--color-slider-background);
+}
+
+.iphone__screen--off {
+  filter: opacity(0);
 }
 
 /*- section-services --------------------------------------- */
@@ -521,27 +530,31 @@ img {
   color: var(--color-portfolio-text);
   word-spacing: 0.01em;
   letter-spacing: -0.0007em;
-}
-
-.portfolio-tab--active {
-  padding-left: 0.58333em;
-  padding-right: 0.58333em;
-  border: 1px solid #c5c5c5;
-  color: #dedede;
-  letter-spacing: -0.02em;
-}
-
-.portfolio-tab:hover {
-  border: 1px solid #c5c5c5;
-}
-
-.portfolio-tab:active {
-  border: 1px solid #c5c5c5;
-  color: #dedede;
+  transition: all 0.15s linear;
 }
 
 .portfolio-tab:focus {
-  border: 1px solid var(--color-slider-background);
+  outline: 1px solid var(--color-slider-background);
+  outline-offset: 1px;
+}
+
+.portfolio-tab:hover {
+  border-color: #c5c5c5;
+  outline: none;
+}
+
+.portfolio-tab:active {
+  border-color: #c5c5c5;
+  color: #dedede;
+  outline: none;
+}
+
+.portfolio-tab--active {
+  border-color: #c5c5c5;
+  color: #dedede;
+}
+
+.portfolio-tab--active:focus {
   outline: none;
 }
 
@@ -562,34 +575,29 @@ img {
 .images-list__item {
   height: 11.6875em;
   width: 13.75em;
-}
-
-.portfolio__link {
-  display: block;
-  height: 100%;
-  font-size: 0;
   overflow: hidden;
+  transition: all 0.1s linear;
 }
 
-.portfolio__link:hover {
-  border-radius: 0.5rem;
-  border: 3px solid var(--color-slider-background);
+.images-list__item:focus {
+  outline: 2px solid #c5c5c5;
+  outline-offset: -2px;
 }
 
-.portfolio__link:active {
+.images-list__item:hover {
   filter: brightness(130%);
-  transition: filter 0.1s linear;
 }
 
-.portfolio__link:focus {
-  border: 1px solid var(--color-slider-background);
-  outline: none;
+.images-list__item--active,
+.images-list__item--active:focus {
+  outline: 5px solid var(--color-slider-background);
+  outline-offset: -5px;
 }
 
 .portfolio__img {
   display: block;
+  height: auto;
   object-fit: fill;
-  font-size: 1rem;
 }
 
 .portfolio__img--01 {
