--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ img {
 }
 
 .iphone__screen--off {
-  filter: opacity(0);
+  /* filter: opacity(0); */
 }
 
 /*- section-services --------------------------------------- */
@@ -771,7 +771,7 @@ img {
 /*- section-get a quote --------------------------------------- */
 
 .quote {
-  padding: 3.85em 0 4.15em 0;
+  padding: 3.85em 0 1.15em 0;
   background-color: var(--color-quote-background);
   border-bottom: 6px solid var(--color-quote-border);
 }
@@ -818,6 +818,11 @@ img {
   overflow: hidden;
 }
 
+.form__input:hover {
+  background-color: #ad423d;
+  transition: background-color 0.5s linear;
+}
+
 .form__input::-ms-input-placeholder {
   color: inherit;
 }
@@ -854,24 +859,26 @@ img {
 }
 
 .form__submit {
-  position: absolute;
-  left: calc(100% + 1.3125rem);
-  bottom: 0;
-  text-transform: uppercase;
-  padding-left: 2em;
-  padding-right: 2em;
+  padding-left: 5em;
+  padding-right: 5em;
+  border: 2px solid transparent;
   color: var(--color-quote-title);
+  line-height: 1;
+  font-weight: 700;
+  text-transform: uppercase;
   cursor: pointer;
 }
 
-.form__submit:hover {
-  padding: calc(0.66667em - 2px) calc(2em - 2px);
-  border: 2px solid var(--color-quote-title);
+.form__submit:active {
+  border-color: var(--color-quote-title);
+  transition: border-color 0.2s linear;
+  outline: none;
 }
 
-.form__submit:active {
+.form__submit:hover {
   background-color: var(--color-footer-background);
-  transition: 0.2s linear;
+  transition: background-color 0.2s linear;
+  outline: none;
 }
 
 .contacts {
@@ -980,4 +987,71 @@ img {
   font-weight: 400;
   color: var(--color-footer-text);
   letter-spacing: -0.005em;
+}
+
+/*- modal --------------------------------------- */
+
+.modal-hidden {
+  display: none;
+}
+
+.modal {
+  display: flex;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 100;
+}
+
+.modal__message {
+  padding: 2em 2.5em;
+  border-radius: 0.41667em;
+  border: 2px solid var(--color-quote-title);
+  background-color: var(--color-quote-background);
+}
+
+.message__title {
+  margin-bottom: 0.75em;
+  color: var(--color-quote-title);
+  text-transform: uppercase;
+  word-spacing: 0.5em;
+}
+
+.message__text {
+  font-size: 1.125rem;
+  line-height: 1.67;
+  font-weight: 300;
+  color: var(--color-quote-text);
+}
+
+.message__btn {
+  margin-top: 2em;
+  padding: 0.6667em 2.5em;
+  border-radius: 0.41667em;
+  border: 2px solid transparent;
+  background-color: var(--color-quote-input-background);
+  font-size: 0.75rem;
+  line-height: 1;
+  font-weight: 700;
+  color: var(--color-quote-title);
+  text-transform: uppercase;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.message__btn:active {
+  border-color: var(--color-quote-title);
+  transition: border-color 0.15s linear;
+  outline: none;
+}
+
+.message__btn:hover {
+  background-color: var(--color-footer-background);
+  transition: background-color 0.2s linear;
+  outline: none;
 }
