--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@
   --content-width: 1020px;
   
   font-size: 1em;
+
+  scroll-behavior: smooth;
 }
 
 body {
@@ -232,11 +234,9 @@ img {
 
 /*- header-height --------------------------------------- */
 
-/* body {
-  position: sticky;
+:root {
   --header-height: calc(2em + 1.5625rem + 2em + 6px);
-  top: var(--header-height);
-} */
+}
 
 /*- slider-section --------------------------------------- */
 
@@ -244,6 +244,7 @@ img {
   padding: 3.3125em 0 3.625em 0;
   background-color: var(--color-slider-background);
   border-bottom: 6px solid var(--color-slider-border);
+  scroll-margin-top: var(--header-height);
 }
 
 .slider__wrapper {
@@ -376,7 +377,7 @@ img {
 }
 
 .iphone__screen--off {
-  /* filter: opacity(0); */
+  filter: opacity(0);
 }
 
 /*- section-services --------------------------------------- */
@@ -385,6 +386,7 @@ img {
   padding: 3.9em 0 1.875em 0;
   background-color: var(--color-services-background);
   border-bottom: 6px solid var(--color-services-border);
+  scroll-margin-top: var(--header-height);
 }
 
 .services__title {
@@ -487,6 +489,7 @@ img {
   padding: 3.89em 0 4.1875em 0;
   background-color: var(--color-portfolio-background);
   border-bottom: 6px solid var(--color-portfolio-border);
+  scroll-margin-top: var(--header-height);
 }
 
 .portfolio__title {
@@ -576,7 +579,6 @@ img {
   height: 11.6875em;
   width: 13.75em;
   overflow: hidden;
-  transition: all 0.1s linear;
 }
 
 .images-list__item:focus {
@@ -586,12 +588,14 @@ img {
 
 .images-list__item:hover {
   filter: brightness(130%);
+  transition: filter 0.3s linear;
 }
 
 .images-list__item--active,
 .images-list__item--active:focus {
   outline: 5px solid var(--color-slider-background);
   outline-offset: -5px;
+  transition: outline 0.1s linear;
 }
 
 .portfolio__img {
@@ -654,6 +658,7 @@ img {
   padding: 3.86em 0 4.2em 0;
   background-color: var(--color-aboutUs-background);
   border-bottom: 6px solid var(--color-aboutUs-border);
+  scroll-margin-top: var(--header-height);
 }
 
 .about-us__title {
@@ -774,6 +779,7 @@ img {
   padding: 3.85em 0 1.15em 0;
   background-color: var(--color-quote-background);
   border-bottom: 6px solid var(--color-quote-border);
+  scroll-margin-top: var(--header-height);
 }
 
 .quote__title {
@@ -1004,7 +1010,7 @@ img {
   bottom: 0;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.75);
   z-index: 100;
 }
 
