--- a/style.css
+++ b/style.css
@@ -486,7 +486,7 @@ img {
 /*- section-portfolio --------------------------------------- */
 
 .portfolio {
-  padding: 3.89em 0 4.1875em 0;
+  padding: 3.89em 0 calc(4.1875em - 5px) 0;
   background-color: var(--color-portfolio-background);
   border-bottom: 6px solid var(--color-portfolio-border);
   scroll-margin-top: var(--header-height);
@@ -562,28 +562,31 @@ img {
 }
 
 .portfolio__images {
-  margin-top: 1.1875em;
+  margin-top: calc(1.1875em - 5px);
+  margin-left: -5px;
+  margin-right: -5px;
 }
 
 .images-list {
-  max-height: 601px;
+  max-height: 611px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  column-gap: 1.25em;
-  row-gap: 1.25em;
+  column-gap: calc(1.25em - 10px);
+  row-gap: calc(1.25em - 10px);
   overflow: hidden;
 }
 
 .images-list__item {
-  height: 11.6875em;
-  width: 13.75em;
+  height: calc(11.6875em + 10px);
+  width: calc(13.75em + 10px);
+  border: 5px solid transparent;
   overflow: hidden;
 }
 
 .images-list__item:focus {
-  outline: 2px solid #c5c5c5;
-  outline-offset: -2px;
+  outline: 1px solid #c5c5c5;
+  outline-offset: -1px;
 }
 
 .images-list__item:hover {
@@ -591,11 +594,12 @@ img {
   transition: filter 0.3s linear;
 }
 
+.images-list__item:active,
 .images-list__item--active,
 .images-list__item--active:focus {
-  outline: 5px solid var(--color-slider-background);
-  outline-offset: -5px;
-  transition: outline 0.1s linear;
+  border-color: var(--color-slider-background);
+  transition: border-color 0.2s linear;
+  outline: none;
 }
 
 .portfolio__img {
@@ -1017,7 +1021,7 @@ img {
 .modal__message {
   padding: 2em 2.5em;
   border-radius: 0.41667em;
-  border: 2px solid var(--color-quote-title);
+  border: 2px solid var(--color-quote-text);
   background-color: var(--color-quote-background);
 }
 
@@ -1036,7 +1040,7 @@ img {
 }
 
 .message__btn {
-  margin-top: 2em;
+  margin-top: 2.5em;
   padding: 0.6667em 2.5em;
   border-radius: 0.41667em;
   border: 2px solid transparent;
@@ -1044,15 +1048,15 @@ img {
   font-size: 0.75rem;
   line-height: 1;
   font-weight: 700;
-  color: var(--color-quote-title);
+  color: var(--color-quote-text);
   text-transform: uppercase;
   overflow: hidden;
   cursor: pointer;
 }
 
 .message__btn:active {
-  border-color: var(--color-quote-title);
-  transition: border-color 0.15s linear;
+  border-color: var(--color-quote-text);
+  transition: border-color 0.2s linear;
   outline: none;
 }
 
