--- a/style.css
+++ b/style.css
@@ -297,8 +297,10 @@ img {
 
 .slider-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .slider-list__item {
@@ -617,8 +619,8 @@ img {
 }
 
 .images-list__item:hover {
-  filter: brightness(130%);
-  transition: filter 0.3s linear;
+  outline: 1px solid var(--color-slider-background);
+  outline-offset: -1px;
 }
 
 .images-list__item:active,
@@ -1028,11 +1030,11 @@ img {
 
 /*- modal --------------------------------------- */
 
-.modal-hidden {
+.modal--hidden {
   display: none;
 }
 
-.modal {
+.modal--visible {
   display: flex;
   position: fixed;
   left: 0;
